# python-api-base

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  POSTMAN_SETUP.md  Python-API-Base.postman_collection.json  Python-API-Base.postman_environment.json  README.md  alembic.ini  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  helm.yml  istio.yml  release.yml  security.yml  terraform.yml
alembic/: env.py
alembic/versions/: 20241126_120000_001b_add_users_table.py  20241127_000001_002_add_roles_tables.py  20241128_000000_004_migrate_float_to_numeric.py  20241201_000000_example_system.py  20241201_000001_add_rbac_tables.py
deployments/: README.md
deployments/docker/: .env.example  README.md  api.Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  init-db.sql  scheduler.Dockerfile  worker.Dockerfile
deployments/serverless/: README.md
deployments/terraform/: README.md  aws.tf  gcp.tf  main.tf  variables.tf  versions.tf
docker/: docker-compose.observability.yml
docker/prometheus/: prometheus.yml
docs/: 2025-architecture-validation-report.md  2025-generics-clean-code-review-report.md  2025-ultimate-generics-validation-report.md  architecture.md  code-review-2025-01-02.md  code-review-2025-report.md  code-review-application-2025-01-02.md  code-review-domain-2025-01-02.md  code-review-report.md  components.md  configuration.md  core-modules-usage-report.md  deployment.md  enterprise-code-review-2025-report.md  example-system-deactivation.md  full-codebase-review-2025-report.md  getting-started.md  glossary.md  index.md  interface-modules-integration-status.md  interface-modules-testing.md  layers.md  libraries.md  migration-guide-interface-layer-generics.md  modules.md  monitoring.md  overview.md  patterns.md  prd.md  refactoring-report-2025-01-02.md  rite-analysis-report.md  state-of-art-generics-review-report.md  testing.md  ultimate-api-base-2025-report.md
docs/adr/: ADR-001-jwt-authentication.md  ADR-002-rbac-implementation.md  ADR-003-api-versioning.md  ADR-004-token-revocation.md  ADR-005-repository-pattern.md  ADR-006-ci-cd-security-automation.md  ADR-006-specification-pattern.md  ADR-007-cqrs-implementation.md  ADR-008-cache-strategy.md  ADR-009-resilience-patterns.md  ADR-010-error-handling.md  ADR-011-observability-stack.md  ADR-012-clean-architecture.md  ADR-015-core-modules-review-2025.md  ADR-015-cqrs-module-restructuring.md  ADR-015-middleware-stack-order.md  ADR-016-application-common-restructuring.md  ADR-016-core-modules-restructuring-2025.md  ADR-017-core-modules-code-review-2025.md  ADR-017-middleware-mixins-services-restructuring.md  README.md
docs/api/: README.md  index.md  openapi.yaml  security.md  versioning.md
docs/architecture/: batch-transaction-consistency.md  c4-model.md  cache-invalidation-strategy.md  component-diagram.md  container-diagram.md  context-diagram.md  data-flows.md  decisions.md  dependencies.md  event-handler-failure-strategies.md  feature-flags-strategy-pattern.md  index.md  overview.md  service-vs-usecase.md  transaction-configuration.md
docs/code-review/: CR-001-middleware-mixins-services-usecases.md  CR-002-users-examples-modules.md
docs/diagrams/: architecture-c4.md  data-flow.md  sequence-diagrams.md
docs/guides/: bounded-context-guide.md  contributing.md  cqrs-middleware-guide.md  debugging-guide.md  getting-started.md  index.md  integration-guide.md  security-guide.md  testing-guide.md
docs/infrastructure/: elasticsearch.md  index.md  kafka.md  minio.md  postgresql.md  redis.md
docs/layers/: index.md
docs/operations/: backup-recovery.md  deployment.md  index.md  monitoring.md  scaling.md  security.md
docs/ops/: observability.md  scaling-strategy.md
docs/runbooks/: README.md  cache-failures.md  circuit-breaker-open.md  database-connection-issues.md
docs/templates/: adr-template.md  api-endpoint-template.md  bounded-context-template.md  module-template.md  runbook-template.md  test-template.md
docs/testing/: e2e-testing.md  index.md  integration-testing.md  manual-api-testing.md  property-testing.md  test-fixtures.md  unit-testing.md
helm/my-api/: Chart.yaml  README.md  values.yaml
k8s/: configmap.yaml  deployment.yaml  external-secret.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  service.yaml
scripts/: README.md  analyze_pep695_compliance.py  check_file_sizes.py  code_review_utils.py  generate_config_docs.py  generate_entity.py  migrate_to_pep695.py  rite_analysis_utils.py  seed_examples.py  validate-config.py  validate-docs.py  validate_architecture.py  validate_docs.py  validate_github_config.py
scripts/cli/: __init__.py  exceptions.py  runner.py  validators.py
src/: __init__.py  main.py
src/application/: __init__.py
src/core/: __init__.py  container.py
src/domain/: __init__.py
src/infrastructure/: __init__.py  exceptions.py
src/interface/: __init__.py  dependencies.py  main.py  openapi.py  router.py  versioning.py
src/my_api/: main.py
terraform/: README.md  aws.tf  azure.tf  backend.hcl.example  gcp.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
terraform/environments/: dev.tfvars  prod.tfvars
tests/: conftest.py
tests/e2e/: test_users_complete_flow.py
tests/factories/: __init__.py  entity_factory.py  generic_fixtures.py  hypothesis_strategies.py  mock_repository.py
tests/integration/: test_token_revocation.py
tests/load/: smoke.js  stress.js
tests/properties/: test_2025_generics_code_quality.py  test_2025_generics_integration.py  test_2025_generics_patterns.py  test_2025_generics_value_objects.py  test_adapters_properties.py  test_advanced_specification_properties.py  test_alembic_config_properties.py  test_allowlist_validator_properties.py  test_anomaly_properties.py  test_api_composition_properties.py  (+190 more)
(+1708 files in other folders)
