[project]
name = "my-api"
version = "0.1.0"
description = "Modern, reusable REST API framework with Python Generics and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Developer", email = "dev@example.com" }]
keywords = ["fastapi", "api", "rest", "generics", "clean-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # CLI
    "typer[all]>=0.12.0",
    # Validation & Serialization
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # ORM & Database
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Dependency Injection
    "dependency-injector>=4.42.0",
    # Observability
    "structlog>=24.4.0",
    "python-json-logger>=2.0.7",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Elasticsearch
    "elasticsearch[async]>=8.12.0",
    # Kafka
    "aiokafka>=0.10.0",
    # ScyllaDB/Cassandra
    "cassandra-driver>=3.29.0",
    # Prometheus
    "prometheus-client>=0.20.0",
    # Redis
    "redis>=5.0.0",
    # MinIO
    "minio>=7.2.0",
    # Security
    "slowapi>=0.1.9",
    "passlib[argon2]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    # Utilities
    "python-ulid>=3.0.0",
    "uuid7>=0.1.0",
    "pendulum>=3.0.0",
    "tenacity>=9.0.0",
    "aiocache>=0.12.3",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    # GraphQL
    "strawberry-graphql[fastapi]>=0.252.0",
    "uuid6>=2025.0.1",
    # gRPC
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "grpcio-health-checking>=1.68.0",
    "grpcio-reflection>=1.68.0",
    "grpcio-status>=1.68.0",
    "protobuf>=5.29.0",
    # Dapr
    "dapr>=1.14.0",
    "dapr-ext-fastapi>=1.14.0",
    "dapr-ext-workflow>=1.14.0",
    "cloudevents>=1.11.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.115.0",
    "polyfactory>=2.17.0",
    "respx>=0.21.0",
    # Code Quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    # Security
    "bandit>=1.7.0",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
api-cli = "cli.main:main"

[project.urls]
Homepage = "https://github.com/example/my-api"
Documentation = "https://example.github.io/my-api"
Repository = "https://github.com/example/my-api"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "property: Property-based tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/interface/*",
    "src/infrastructure/dapr/*",
    "src/infrastructure/grpc/*",
    "src/infrastructure/kafka/*",
    "src/infrastructure/elasticsearch/*",
    "src/infrastructure/scylladb/*",
    "src/infrastructure/db/*",
    "src/infrastructure/di/*",
    "src/infrastructure/eventing/*",
    "src/infrastructure/lifecycle/*",
    "src/infrastructure/minio/*",
    "src/infrastructure/redis/*",
    "src/infrastructure/observability/elasticsearch_*",
    "src/infrastructure/observability/logging_middleware.py",
    "src/infrastructure/observability/middleware.py",
    "src/infrastructure/observability/telemetry/service.py",
    "src/infrastructure/ratelimit/middleware.py",
    "src/infrastructure/messaging/asyncapi/*",
    "src/infrastructure/auth/validators/*",
    "src/infrastructure/auth/oauth/*",
    "src/infrastructure/auth/jwks/*",
    "src/infrastructure/tasks/rabbitmq/*",
    "src/infrastructure/storage/minio_provider.py",
    "src/infrastructure/messaging/brokers/*",
    "src/application/services/multitenancy/*",
    "src/application/common/services/events/kafka_event_service.py",
    "src/application/users/read_model/*",
    "src/core/protocols/*",
    "src/core/di/*",
    "src/infrastructure/tasks/protocols.py",
    "src/application/common/batch/repositories/*",
    "src/application/common/mappers/interfaces/*",
    "src/infrastructure/auth/jwt/jwks.py",
    "src/infrastructure/auth/jwt/jwks_models.py",
    "src/infrastructure/audit/filters.py",
    "src/core/base/repository/interface.py",
    "src/domain/users/repositories/*",
    "src/core/shared/logging/trace_context.py",
    "src/core/shared/logging/config.py",
    "src/application/examples/pedido/use_cases/*",
    "src/infrastructure/cache/providers/redis*.py",
    "src/infrastructure/cache/providers/memory.py",
    "src/infrastructure/auth/jwt/protocols.py",
    "src/infrastructure/auth/token_store/*",
    "src/application/common/use_cases/base/use_case.py",
    "src/application/common/middleware/*",
    "src/application/examples/pedido/handlers/*",
    "src/application/examples/pedido/mappers/*",
    "src/application/examples/item/handlers/*",
    "src/application/examples/item/batch/*",
    "src/application/examples/item/dtos/*",
    "src/application/common/cqrs/queries/*",
    "src/application/common/export/serializers/*",
    "src/core/config/infrastructure/*",
    "src/core/config/shared/*",
    "src/core/errors/http/*",
    "src/core/base/cqrs/*",
    "src/core/base/domain/value_object.py",
    "src/core/shared/utils/time.py",
    "src/domain/examples/item/specifications.py",
    "src/infrastructure/audit/storage.py",
    "src/infrastructure/auth/jwt/es256_provider.py",
    "src/infrastructure/auth/jwt/rs256_provider.py",
    "src/infrastructure/auth/jwt/factory.py",
    "src/infrastructure/auth/jwt/time_source.py",
    "src/infrastructure/cache/*",
    "src/infrastructure/feature_flags/*",
    "src/infrastructure/generics/*",
    "src/infrastructure/httpclient/*",
    "src/infrastructure/idempotency/*",
    "src/infrastructure/multitenancy/*",
    "src/infrastructure/ratelimit/limiter.py",
    "src/infrastructure/rbac/audit.py",
    "src/infrastructure/resilience/bulkhead.py",
    "src/infrastructure/security/field_encryption.py",
    "src/infrastructure/security/rbac.py",
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = false
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ulid.*",
    "passlib.*",
    "aiocache.*",
    "slowapi.*",
    "grpc.*",
    "grpc_health.*",
    "grpc_reflection.*",
    "grpc_status.*",
    "google.protobuf.*",
    "dapr.*",
    "cloudevents.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/conftest.py"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest-timeout]
timeout = 300
timeout_method = "thread"
timeout_func_only = true

[tool.hypothesis]
max_examples = 100
deadline = 5000
derandomize = false
print_blob = true

[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests/", ".venv/"]
ignore_decorators = ["@app.route", "@router.*", "@abstractmethod"]
ignore_names = ["visit_*", "do_*"]
